# deta-python-2

./: README.md  pyproject.toml
deta/: __init__.py  docs.py
deta/space/: __init__.py  apps.py  builder.py  canvas.py  collections.py  discovery.py  teletype.py
deta/space/actions/: __init__.py
