[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deta"
dynamic = ["version"]
description = "Python Deta API wrapper."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
authors = [
    {name = "Lemonyte"},
]
keywords = [
    "deta",
    "api",
    "wrapper",
    "http",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lemonyte/deta-python-2"

[tool.setuptools]
packages = ["deta"]
package-data = {deta = ["py.typed"]}

[tool.setuptools.dynamic]
version = {attr = "deta.__version__"}
